# esp-32

./: .gitignore  README.md
hello_world/: .gitignore  CMakeLists.txt  sdkconfig
hello_world/main/: CMakeLists.txt  hello_world_main.c
scd41-homekit/: .gitignore  CMakeLists.txt  README.md
scd41-homekit/components/i2c-scd4x/: CMakeLists.txt
scd41-homekit/components/i2c-scd4x/src/: sensirion_i2c_hal.c
scd41-homekit/main/: CMakeLists.txt  Kconfig.projbuild  homekit.c  homekit.h  idf_component.yml  ld2420.c  ld2420.h  main.c  matter.cpp  matter.h  test.cpp  wifi.c  wifi.h
ws2812b-homekit/: CMakeLists.txt
ws2812b-homekit/components/esp_hap_core/: idf_component.yml
ws2812b-homekit/main/: CMakeLists.txt  homekit.c  homekit.h  idf_component.yml  leds.c  leds.h  main.c  wifi.c  wifi.h
